# Presenter-Server

./: .travis.yml  README.md  check-code-style.sh
src/: CMakeLists.txt
src/keysenderDaemon/: KeySenderDaemon.cpp
src/main/: CMakeLists.txt  Version.h.in
src/main/connector/: CMakeLists.txt  KeySender.cpp  KeySender.h  RemoteControl.cpp  key_sender.c  key_sender.h
src/main/connector/bluetooth/: BluetoothConnector_Linux.cpp  BluetoothConnector_Windows.cpp
src/main/connector/network/: CMakeLists.txt  NetworkConnector.cpp  NetworkConnector.h
src/main/gui/: AboutWindow.cpp  AboutWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
